@@ -1,13 +1,11 @@
 package com.close.hook.ads.hook.gc;
 
-import com.close.hook.ads.hook.util.HookUtil;
-
 import java.io.BufferedReader;
 import java.io.File;
 import java.io.FileReader;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.Set;
+
+import com.close.hook.ads.hook.util.HookUtil;
 
 import de.robv.android.xposed.XposedBridge;
 
@@ -18,7 +16,7 @@ import de.robv.android.xposed.XposedBridge;
 
 public class HideEnvi {
 
-    private static final Set<String> XPOSED_MAGISK_PATHS = new HashSet<>(Arrays.asList(
+    private static final Set<String> XPOSED_MAGISK_PATHS = Set.of(
             "/sbin/.magisk",
             "/system/bin/magisk",
             "/data/data/com.topjohnwu.magisk",
@@ -28,7 +26,7 @@ public class HideEnvi {
             "/system/sbin/su",
             "/sbin/su",
             "/vendor/bin/su"
-        ));
+    );
 
     private static final String[] XPOSED_FEATURES = {
             "xposed.installer",
@@ -47,16 +45,26 @@ public class HideEnvi {
     public static void handle() {
         hideXposedMagiskPaths();
         hideXposedMagiskInExec();
+        hideSystemProperties();
         AntiEmulatorDetection.handle();
     }
 
     private static void hideXposedMagiskPaths() {
         HookUtil.hookAllMethods(File.class, "exists", "before", param -> {
             File file = (File) param.thisObject;
-            if (XPOSED_MAGISK_PATHS.contains(file.getAbsolutePath())) {
+            if (isXposedMagiskPath(file.getAbsolutePath())) {
                 param.setResult(false);
             }
         });
+    }
+
+    private static boolean isXposedMagiskPath(String path) {
+        for (String prefix : XPOSED_MAGISK_PATHS) {
+            if (path.startsWith(prefix)) {
+                return true;
+            }
+        }
+        return false;
     }
 
     private static void hideXposedMagiskInExec() {
@@ -76,7 +84,7 @@ public class HideEnvi {
                 }
             }
         } catch (Exception e) {
-            XposedBridge.log("HideEnvi Error: " + e.getMessage());
+            XposedBridge.log("HideEnvi Error while reading maps: " + e.getMessage());
         }
         return false;
     }
@@ -88,10 +96,24 @@ public class HideEnvi {
             }
         }
         for (String feature : MAGISK_FEATURES) {
-            if ((line.contains(feature) && line.contains("r-xp")) || line.length() > 8192) {
+            if (line.contains(feature) && line.contains("r-xp")) {
                 return true;
             }
         }
-        return false;
+        return line.length() > 8192;
+    }
+
+    private static void hideSystemProperties() {
+        HookUtil.hookAllMethods("android.os.SystemProperties", "get", "before", param -> {
+            String key = (String) param.args[0];
+            if (isXposedMagiskProperty(key)) {
+                param.setResult("");
+            }
+        });
+    }
+
+    private static boolean isXposedMagiskProperty(String key) {
+        String lowerKey = key.toLowerCase();
+        return lowerKey.contains("xposed") || lowerKey.contains("magisk");
     }
 }
